Programming Languages/Hw2/part4/t20.output
running e2c
compiling the C generated code
t20.c: In function ‘main’:
t20.c:4:1: error: unknown type name ‘redeclaration’
 redeclaration of variable i
 ^
t20.c:4:18: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘variable’
 redeclaration of variable i
                  ^
t20.c:6:2: error: expected expression before ‘=’ token
  = ;
  ^
t20.c:7:16: error: ‘s’ undeclared (first use in this function)
 printf("%d\n", s);
                ^
t20.c:7:16: note: each undeclared identifier is reported only once for each function it appears in
t20.c:8:11: error: expected expression before ‘<=’ token
 while( -  <= 0){
           ^
t20.c:9:8: error: expected expression before ‘<=’ token
 if( -  <= 0){
        ^
t20.c:10:2: error: expected expression before ‘=’ token
  =  - ;
  ^
t20.c:11:8: error: expected expression before ‘<=’ token
 while( <= 0){
        ^
t20.c:12:16: error: ‘k’ undeclared (first use in this function)
 printf("%d\n", k);
                ^
t20.c:13:2: error: expected expression before ‘=’ token
  =  + ;
  ^
t20.c:16:13: error: expected expression before ‘<=’ token
 else if( -  <= 0){
             ^
t20.c:17:2: error: expected expression before ‘=’ token
  =  - ;
  ^
t20.c:18:8: error: expected expression before ‘<=’ token
 while( <= 0){
        ^
t20.c:19:2: error: expected expression before ‘=’ token
  = *;
  ^
t20.c:20:16: error: expected expression before ‘long’
 printf("%d\n", long);
                ^
t20.c:21:2: error: expected expression before ‘=’ token
  =  + ;
  ^
t20.c:25:2: error: expected expression before ‘=’ token
  =  - ;
  ^
t20.c:26:8: error: expected expression before ‘<=’ token
 while( <= 0){
        ^
t20.c:28:2: error: expected expression before ‘=’ token
  =  + ;
  ^
t20.c:31:2: error: expected expression before ‘=’ token
  =  - ;
  ^
t20.c:33:16: error: ‘i’ undeclared (first use in this function)
 printf("%d\n", i);
                ^
